--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Noto Sans', sans-serif;
+    margin: 0%;
 }
 h1{
     font-size: 25px;
@@ -26,4 +27,8 @@ button a{
     text-decoration: none;
     color: white;
     font-weight: 700;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
